Added Adobe Animate Animation Page
Added new page with an animation created in Adobe Animate. Also added new button to the navigation bar to access this new page.

--- a/animation.html
+++ b/animation.html
@@ -1,17 +1,15 @@
-<?xml version = "1.0"?>
-<!DOCTYPE HTML PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
+<?xml version="1.0" ?>
+<!DOCTYPE HTML PUBLIC "-//w3c//DTD XHTML 1.1//EN""http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <HTML xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title> Jadnell Reyes' Website </title>
+    <title> Adobe Animate Animation </title>
     <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
 </head>
 
-<meta name="description" content="This webpage contains information about Jadnell Reyes, 
-            a Puerto Rican Computer Engineering Student">
+<meta name="description" content="This webpage contains an animation made in Adobe Animate 2022.">
 
-<body>
+<body id="animationBody">
     <header>
         <static div id="navbar">
             <center>
@@ -19,8 +17,8 @@
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="aboutMe2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet"
-                        width="50px" height="50px" alt="Where is my button?">
+                <a class="button" href="animation2.html"><img src="Images/otherStyleSheet.png"
+                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
                 </a>
 
                 <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
@@ -43,65 +41,21 @@
             </div>
     </header>
 
-    <br><br>
+    <br>
 
-    <h2>
-        <center> Hello, </center>
-    </h2>
-
-    <h1>
-        <center> my name is Jadnell H. Reyes Pérez </center>
-    </h1>
-
-    <hr width="90%">
-
-    <h5>
-        <center> <b>↓ This is me ↓</b> </center>
-    </h5>
     <center>
-        <a><img id="myPic" src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
-                alt="I was supposed to appear here..."></a>
+        <h3 id="animationTitle"> Adobe Animate Animation: </h3>
+        <h5 id="animationCreator"> by Jadnell Reyes (October, 2022)</h5> 
     </center>
-    <hr width="90%">
-    <h3>
-        <center> Personal information: </center>
-    </h3>
+    <hr>
+    <br>
+    <center>
+        <div id="animationSpace">
+            <embed src="images/skateboarding_Goat.mp4" title="Skateboarding Goat Animation" width="750px" height="750px" alt="Where did my GOAT go?"></embed>
+        </div>
     </center>
-    <ul>
-        <li> <b><i>Birth Place:</i></b> Puerto Rico </li>
-        <li> <b><i>Birth Date:</i></b> January 25, 2001 </li>
-        <li> <b><i>Age:</i></b> 21 </li>
-        <li> <b><i>Sex:</i></b> Male </li>
-        <li> <b><i>Zodiac Sign:</i></b> Aquarius </li>
-    </ul>
 
-    <hr width="90%">
-
-    <h3>
-        <center> Student information: </center>
-    </h3>
-    <ul>
-        <li> <b><i>University:</i></b> Polytechnic University of Puerto Rico </li>
-        <li> <b><i>Student ID:</i></b> #109739</li>
-        <li> <b><i>Degree:</i></b> Bachelor's </li>
-        <li> <b><i>Concentration:</i></b> Computer Engineering</li>
-        <li> <b><i>Graduation Date:</i></b> May, 2023 </li>
-        <li> <b><i>Years in College:</i></b> 4 </li>
-        <li> <b><i>GPA:</i></b> 3.29 </li>
-    </ul>
-    <hr width="90%">
-
-    <h3>
-        <center> Contact information: </center>
-    </h3>
-    <ul>
-        <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
-        <li> <b><i>Personal Email:</i></b> <a href="mailto: jadnell.555@gmail.com"> jadnell.555@gmail.com </a> </li>
-        <li> <b><i>Professional Email:</i></b> <a href="mailto: jadnellReyes@gmail.com"> jadnellReyes@gmail.com </a>
-        </li>
-        <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
-                reyes_109739@students.pupr.edu </a> </li>
-    </ul>
+    <br><br>
     <hr width="90%">
 
     <footer>
