--- a/progLanguagesPage2.html
+++ b/progLanguagesPage2.html
@@ -16,8 +16,8 @@
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="progLanguagesPage.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
-                        height="50px" alt="Where is my button?">
+                <a class="button" href="progLanguagesPage.html"><img src="Images/otherStyleSheet.png"
+                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
                 </a>
 
                 <a class="button" href="progLanguagesPage2.html"><img src="Images/programmingLanguages.png"
@@ -30,6 +30,10 @@
                 </a>
 
                 <a class="button" href="javascriptPreQuiz2.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
+                        width="50px" height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="animation2.html"><img src="Images/animation.png" title="Adobe Animate Animation"
                         width="50px" height="50px" alt="Where is my button?">
                 </a>
             </center>
