--- a/javascriptPreQuiz.html
+++ b/javascriptPreQuiz.html
@@ -33,6 +33,10 @@
                 <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
                         width="50px" height="50px" alt="Where is my button?">
                 </a>
+
+                <a class="button" href="animation.html"><img src="Images/animation.png" title="Adobe Animate Animation"
+                        width="50px" height="50px" alt="Where is my button?">
+                </a>
             </center>
             </div>
     </header>
