--- a/animation.html
+++ b/animation.html
@@ -45,13 +45,16 @@
 
     <center>
         <h3 id="animationTitle"> Adobe Animate Animation: </h3>
-        <h5 id="animationCreator"> by Jadnell Reyes (October, 2022)</h5> 
+        <h5 id="animationCreator"> by Jadnell Reyes (October, 2022)</h5>
     </center>
     <hr>
     <br>
     <center>
         <div id="animationSpace">
-            <embed src="images/skateboarding_Goat.mp4" title="Skateboarding Goat Animation" width="750px" height="750px" alt="Where did my GOAT go?"></embed>
+            <video controls>
+                <source src="images/skateboarding_Goat.mp4" type="video/mp4" title="Skateboarding Goat Animation"
+                    width="750px" height="750px" alt="Where did my GOAT go?">
+            </video>
         </div>
     </center>
 
