--- a/animation2.html
+++ b/animation2.html
@@ -51,7 +51,10 @@
     <br>
     <center>
         <div id="animationSpace">
-            <embed src="images/skateboarding_Goat.mp4" title="Skateboarding Goat Animation" width="750px" height="750px" alt="Where did my GOAT go?"></embed>
+            <video controls>
+                <source src="images/skateboarding_Goat.mp4" type="video/mp4" title="Skateboarding Goat Animation"
+                    width="750px" height="750px" alt="Where did my GOAT go?">
+            </video>
         </div>
     </center>
 
