--- a/animation.html
+++ b/animation.html
@@ -51,9 +51,9 @@
     <br>
     <center>
         <div id="animationSpace">
-            <video controls>
-                <source src="images/skateboarding_Goat.mp4" type="video/mp4" title="Skateboarding Goat Animation"
-                    width="750px" height="750px" alt="Where did my GOAT go?">
+            <video controls="" width="750px" height="750px" muted="" loop="yes" autoplay="yes">
+                <source src="https://github.com/jadnell555/jadnell555.github.io/blob/main/Images/skateboarding_Goat.mp4" type="video/mp4"
+                     alt="Where did my GOAT go?">
             </video>
         </div>
     </center>
