--- a/animation.html
+++ b/animation.html
@@ -52,8 +52,7 @@
     <center>
         <div id="animationSpace">
             <video controls="" width="750px" height="750px" muted="" loop="yes" autoplay="yes">
-                <source src="https://github.com/jadnell555/jadnell555.github.io/raw/main/Images/skateboarding_Goat.mp4" type="video/mp4"
-                     alt="Where did my GOAT go?">
+                <source src="https://github.com/jadnell555/jadnell555.github.io/raw/main/Images/skateboarding_Goat.mp4" type="video/mp4">
             </video>
         </div>
     </center>
