--- a/animation.html
+++ b/animation.html
@@ -51,7 +51,7 @@
     <br>
     <center>
         <div id="animationSpace">
-            <video controls="" width="750px" height="750px" muted="" loop="yes" autoplay="yes">
+            <video controls="" width="750px" height="750px" muted="" loop="" autoplay="">
                 <source src="https://github.com/jadnell555/jadnell555.github.io/raw/main/Images/skateboarding_Goat.mp4" type="video/mp4">
             </video>
         </div>
