--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 <a class="button" href="animation.html"><img src="Images/animation.png" title="Adobe Animate Animation"
                         width="50px" height="50px" alt="Where is my button?">
                 </a>
+
+                <a class="button" href="textbooks_HW4.zip"><img src="Images/xml.png" title="Book List XML Document"
+                        width="50px" height="50px" alt="Where is my button?">
+                </a>
             </center>
             </div>
     </header>
