First commit of portfolio. New navigation bar

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <HTML xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title> Jadnell Reyes' Website </title>
+    <title> Jadnell Reyes' Portfolio </title>
     <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
 </head>
 
 <meta name="description" content="This webpage contains information about Jadnell Reyes, 
             a Puerto Rican Computer Engineering Student">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
     <header>
-        <static div id="navbar">
+    </header>
+        <div id="navBar">
             <center>
                 <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
@@ -31,21 +33,8 @@
                     <img src="Images/projects.png" title="Projects" width="50px" height="50px"
                         alt="Where is my button?">
                 </a>
-
-                <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
-                        width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="animation.html"><img src="Images/animation.png" title="Adobe Animate Animation"
-                        width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="https://github.com/jadnell555/jadnell555.github.io/blob/main/textbooks_HW4.zip"><img src="Images/xml.png" title="Book List XML Document"
-                        width="50px" height="50px" alt="Where is my button?">
-                </a>
             </center>
-            </div>
-    </header>
+        </div>
 
     <br><br>
 
