--- a/index.html
+++ b/index.html
@@ -4,37 +4,87 @@
 <HTML xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title> Jadnell Reyes' Portfolio </title>
+    <meta charset="utf-8">
     <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <meta name="description" content="This webpage contains information about Jadnell Reyes, 
+    a Puerto Rican Computer Engineering Student">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Jadnell Reyes' Portfolio </title>
 </head>
-
-<meta name="description" content="This webpage contains information about Jadnell Reyes, 
-            a Puerto Rican Computer Engineering Student">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
     <header>
     </header>
-        <div id="navBar">
-            <center>
-                <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
-                        height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="aboutMe2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet"
-                        width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
-                        title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="projectsPage.html">
-                    <img src="Images/projects.png" title="Projects" width="50px" height="50px"
-                        alt="Where is my button?">
-                </a>
-            </center>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <div id="navBar">
+        <div class="dropdown">
+            <button class="btn" id="menuButton" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <img src="Images/hamburgerMenu.png" title="Menu" width="48px" height="48px" alt="Menu Button">
+            </button>
+            <ul class="dropdown-menu dropdown-center">
+                <h6 class="dropdown-header"> About Me </h6>
+                <li><a class="dropdown-item" href="index.html"><img src="Images/aboutMe.png" title="About Me"
+                            width="50px" height="50px" alt="Where is my button?"></a></li>
+                <h6 class="dropdown-header"> Programming Languages </h6>
+                <li><a class="dropdown-item" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
+                            title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+                    </a></li>
+                <h6 class="dropdown-header"> Projects </h6>
+                <li><a class="dropdown-item" href="projectsPage.html">
+                        <img src="Images/projects.png" title="Projects" width="50px" height="50px"
+                            alt="Where is my button?">
+                    </a></li>
+            </ul>
         </div>
+        <!--
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col">
+                    <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                            height="50px" alt="Where is my button?">
+                    </a>
+                </div>
+                <div class="col">
+                    <a class="button" href="aboutMe2.html"><img src="Images/otherStyleSheet.png"
+                            title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
+                    </a>
+                </div>
+                <div class="col">
+                    <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
+                            title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+                    </a>
+                </div>
+                <div class="col"> <a class="button" href="projectsPage.html">
+                        <img src="Images/projects.png" title="Projects" width="50px" height="50px"
+                            alt="Where is my button?">
+                    </a></div>
+            </div>
+        </div>
+        
+        <center>
+            <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                    height="50px" alt="Where is my button?">
+            </a>
+
+            <a class="button" href="aboutMe2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet"
+                    width="50px" height="50px" alt="Where is my button?">
+            </a>
+
+            <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
+                    title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+            </a>
+
+            <a class="button" href="projectsPage.html">
+                <img src="Images/projects.png" title="Projects" width="50px" height="50px" alt="Where is my button?">
+            </a>
+        </center>
+-->
+    </div>
 
     <br><br>
 
@@ -56,76 +106,87 @@
                 alt="I was supposed to appear here..."></a>
     </center>
     <hr width="90%">
-    <h3>
-        <center> Personal information: </center>
-    </h3>
-    </center>
-    <ul>
-        <li> <b><i>Birth Place:</i></b> Puerto Rico </li>
-        <li> <b><i>Birth Date:</i></b> January 25, 2001 </li>
-        <li> <b><i>Age:</i></b> 21 </li>
-        <li> <b><i>Sex:</i></b> Male </li>
-        <li> <b><i>Zodiac Sign:</i></b> Aquarius </li>
-    </ul>
+    <div class="container">
+        <h3>
+            <center> Personal information: </center>
+        </h3>
+        </center>
+        <ul>
+            <li> <b><i>Birth Place:</i></b> Puerto Rico </li>
+            <li> <b><i>Birth Date:</i></b> January 25, 2001 </li>
+            <li> <b><i>Age:</i></b> 21 </li>
+            <li> <b><i>Sex:</i></b> Male </li>
+            <li> <b><i>Zodiac Sign:</i></b> Aquarius </li>
+        </ul>
+    </div>
 
     <hr width="90%">
 
-    <h3>
-        <center> Student information: </center>
-    </h3>
-    <ul>
-        <li> <b><i>University:</i></b> Polytechnic University of Puerto Rico </li>
-        <li> <b><i>Student ID:</i></b> #109739</li>
-        <li> <b><i>Degree:</i></b> Bachelor's </li>
-        <li> <b><i>Concentration:</i></b> Computer Engineering</li>
-        <li> <b><i>Graduation Date:</i></b> May, 2023 </li>
-        <li> <b><i>Years in College:</i></b> 4 </li>
-        <li> <b><i>GPA:</i></b> 3.29 </li>
-    </ul>
+    <div class="container">
+        <h3>
+            <center> Student information: </center>
+        </h3>
+        <ul>
+            <li> <b><i>University:</i></b> Polytechnic University of Puerto Rico </li>
+            <li> <b><i>Student ID:</i></b> #109739</li>
+            <li> <b><i>Degree:</i></b> Bachelor's </li>
+            <li> <b><i>Concentration:</i></b> Computer Engineering</li>
+            <li> <b><i>Graduation Date:</i></b> May, 2023 </li>
+            <li> <b><i>Years in College:</i></b> 4 </li>
+            <li> <b><i>GPA:</i></b> 3.29 </li>
+        </ul>
+    </div>
     <hr width="90%">
 
-    <h3>
-        <center> Contact information: </center>
-    </h3>
-    <ul>
-        <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
-        <li> <b><i>Personal Email:</i></b> <a href="mailto: jadnell.555@gmail.com"> jadnell.555@gmail.com </a> </li>
-        <li> <b><i>Professional Email:</i></b> <a href="mailto: jadnellReyes@gmail.com"> jadnellReyes@gmail.com </a>
-        </li>
-        <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
-                reyes_109739@students.pupr.edu </a> </li>
-    </ul>
+    <div class="container">
+        <h3>
+            <center> Contact information: </center>
+        </h3>
+        <ul>
+            <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
+            <li> <b><i>Personal Email:</i></b> <a href="mailto: jadnell.555@gmail.com"> jadnell.555@gmail.com </a>
+            </li>
+            <li> <b><i>Professional Email:</i></b> <a href="mailto: jadnellReyes@gmail.com"> jadnellReyes@gmail.com
+                </a>
+            </li>
+            <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
+                    reyes_109739@students.pupr.edu </a> </li>
+        </ul>
+    </div>
     <hr width="90%">
+    <div class="container">
+        <footer>
+            <h4>
+                <center> Social Media: </center>
+            </h4>
 
-    <footer>
-        <h4>
-            <center> Social Media: </center>
-        </h4>
+            <static div id="socialMediaBar">
+                <center>
+                    <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
+                            title="About Me" width="50px" height="50px" alt="Where is my button?">
+                    </a>
 
-        <static div id="socialMediaBar">
-            <center>
-                <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
-                        title="About Me" width="50px" height="50px" alt="Where is my button?">
-                </a>
+                    <a class="button" href="https://www.facebook.com/jadnell"><img src="Images/facebook.png"
+                            title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
+                    </a>
 
-                <a class="button" href="https://www.facebook.com/jadnell"><img src="Images/facebook.png"
-                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
-                </a>
+                    <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
+                            title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
+                    </a>
 
-                <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
-                        title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
-                </a>
+                    <a class="button" href="https://paypal.me/jadnell">
+                        <img src="Images/paypal.png" title="Projects" width="50px" height="50px"
+                            alt="Where is my button?">
+                    </a>
 
-                <a class="button" href="https://paypal.me/jadnell">
-                    <img src="Images/paypal.png" title="Projects" width="50px" height="50px" alt="Where is my button?">
-                </a>
-
-                <a class="button" href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
-                        title="JavaScript Pre-Quiz" width="50px" height="50px" alt="Where is my button?">
-                </a>
-            </center>
-            </div>
+                    <a class="button" href="https://discord.com/channels/@harshGhost.error"><img
+                            src="Images/discord.png" title="JavaScript Pre-Quiz" width="50px" height="50px"
+                            alt="Where is my button?">
+                    </a>
+                </center>
+    </div>
     </footer>
+    </div>
 </body>
 
 </HTML>
