Made changes to the index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <meta name="description" content="This webpage contains information about Jadnell Reyes, 
@@ -21,24 +21,26 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <div id="navBar">
-        <div class="dropdown">
-            <button class="btn" id="menuButton" type="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+        <div class="dropdown-center">
+            <button class="btn" id="menuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="Images/hamburgerMenu.png" title="Menu" width="48px" height="48px" alt="Menu Button">
             </button>
-            <ul class="dropdown-menu dropdown-center">
-                <h6 class="dropdown-header"> About Me </h6>
-                <li><a class="dropdown-item" href="index.html"><img src="Images/aboutMe.png" title="About Me"
-                            width="50px" height="50px" alt="Where is my button?"></a></li>
-                <h6 class="dropdown-header"> Programming Languages </h6>
-                <li><a class="dropdown-item" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
-                            title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
-                    </a></li>
-                <h6 class="dropdown-header"> Projects </h6>
-                <li><a class="dropdown-item" href="projectsPage.html">
-                        <img src="Images/projects.png" title="Projects" width="50px" height="50px"
-                            alt="Where is my button?">
-                    </a></li>
+            <ul class="dropdown-menu">
+                <center>
+                    <h6 class="dropdown-header"> About Me </h6>
+                    <li><a class="dropdown-item" href="index.html"><img src="Images/aboutMe.png" title="About Me"
+                                width="50px" height="50px" alt="Where is my button?"></a></li>
+                    <h6 class="dropdown-header"> Programming Languages </h6>
+                    <li><a class="dropdown-item" href="progLanguagesPage.html"><img
+                                src="Images/programmingLanguages.png" title="Programming Languages" width="55px"
+                                height="55px" alt="Where is my button?">
+                        </a></li>
+                    <h6 class="dropdown-header"> Projects </h6>
+                    <li><a class="dropdown-item" href="projectsPage.html">
+                            <img src="Images/projects.png" title="Projects" width="50px" height="50px"
+                                alt="Where is my button?">
+                        </a></li>
+                </center>
             </ul>
         </div>
         <!--
@@ -85,9 +87,6 @@
         </center>
 -->
     </div>
-
-    <br><br>
-
     <h2>
         <center> Hello, </center>
     </h2>
@@ -95,97 +94,82 @@
     <h1>
         <center> my name is Jadnell H. Reyes Pérez </center>
     </h1>
+    <br>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <div class="container">
+                    <center>
+                        <a><img id="myPic" src="Images/ME.jpg" title="Hello! This is me" width="350px" height="350px"
+                                alt="I was supposed to appear here..."></a>
+                    </center>
+                </div>
+            </div>
 
-    <hr width="90%">
+            <div class="col">
+                <div class="placeholder"></div>
+                <div class="container">
+                    <div class="card">
+                        <h3>
+                            <center> Summary: </center>
+                        </h3>
+                        <br>
+                        <p>
+                            I'm a Puerto Rican Senior Computer Engineering Student, from the Polytechnic University
+                            of Puerto Rico.
+                            I have 22 years old looking to improve my knowledge and skills with experience.
+                        </p>
+                    </div>
+                </div>
+                <div class="placeholder"></div>
+                <div class="container">
+                    <div class="card">
+                        <h3>
+                            <center> Contact: </center>
+                        </h3>
+                        <ul class="lists">
+                            <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
+                            <li> <b><i>Email:</i></b> <a href="mailto: jadnellReyes@gmail.com">
+                                    jadnellReyes@gmail.com</a>
+                            </li>
 
-    <h5>
-        <center> <b>↓ This is me ↓</b> </center>
-    </h5>
-    <center>
-        <a><img id="myPic" src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
-                alt="I was supposed to appear here..."></a>
-    </center>
-    <hr width="90%">
-    <div class="container">
-        <h3>
-            <center> Personal information: </center>
-        </h3>
-        </center>
-        <ul>
-            <li> <b><i>Birth Place:</i></b> Puerto Rico </li>
-            <li> <b><i>Birth Date:</i></b> January 25, 2001 </li>
-            <li> <b><i>Age:</i></b> 21 </li>
-            <li> <b><i>Sex:</i></b> Male </li>
-            <li> <b><i>Zodiac Sign:</i></b> Aquarius </li>
-        </ul>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <hr width="90%">
-
-    <div class="container">
-        <h3>
-            <center> Student information: </center>
-        </h3>
-        <ul>
-            <li> <b><i>University:</i></b> Polytechnic University of Puerto Rico </li>
-            <li> <b><i>Student ID:</i></b> #109739</li>
-            <li> <b><i>Degree:</i></b> Bachelor's </li>
-            <li> <b><i>Concentration:</i></b> Computer Engineering</li>
-            <li> <b><i>Graduation Date:</i></b> May, 2023 </li>
-            <li> <b><i>Years in College:</i></b> 4 </li>
-            <li> <b><i>GPA:</i></b> 3.29 </li>
-        </ul>
-    </div>
-    <hr width="90%">
-
-    <div class="container">
-        <h3>
-            <center> Contact information: </center>
-        </h3>
-        <ul>
-            <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
-            <li> <b><i>Personal Email:</i></b> <a href="mailto: jadnell.555@gmail.com"> jadnell.555@gmail.com </a>
-            </li>
-            <li> <b><i>Professional Email:</i></b> <a href="mailto: jadnellReyes@gmail.com"> jadnellReyes@gmail.com
-                </a>
-            </li>
-            <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
-                    reyes_109739@students.pupr.edu </a> </li>
-        </ul>
-    </div>
-    <hr width="90%">
     <div class="container">
         <footer>
+            <br>
             <h4>
                 <center> Social Media: </center>
             </h4>
 
-            <static div id="socialMediaBar">
+            <div id="socialMediaBar">
+                <br>
                 <center>
                     <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
-                            title="About Me" width="50px" height="50px" alt="Where is my button?">
+                            title="Instagram" width="50px" height="50px" alt="Where is my button?">
                     </a>
 
-                    <a class="button" href="https://www.facebook.com/jadnell"><img src="Images/facebook.png"
-                            title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
-                    </a>
-
-                    <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
-                            title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
+                    <a class="button" href="https://www.twitter.com/jadnellReyes"><img src="Images/twitter.png"
+                            title="Twitter" width="50px" height="50px" alt="Where is my button?">
                     </a>
 
                     <a class="button" href="https://paypal.me/jadnell">
-                        <img src="Images/paypal.png" title="Projects" width="50px" height="50px"
+                        <img src="Images/paypal.png" title="PayPal" width="50px" height="50px"
                             alt="Where is my button?">
                     </a>
 
-                    <a class="button" href="https://discord.com/channels/@harshGhost.error"><img
-                            src="Images/discord.png" title="JavaScript Pre-Quiz" width="50px" height="50px"
-                            alt="Where is my button?">
+                    <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png" title="GitHub"
+                            width="50px" height="50px" alt="Where is my button?">
                     </a>
+
                 </center>
-    </div>
-    </footer>
+            </div>
+        </footer>
     </div>
 </body>
 
