Changes to index design

--- a/index.html
+++ b/index.html
@@ -26,21 +26,18 @@
                 <img src="Images/hamburgerMenu.png" title="Menu" width="48px" height="48px" alt="Menu Button">
             </button>
             <ul class="dropdown-menu">
-                <center>
-                    <h6 class="dropdown-header"> About Me </h6>
-                    <li><a class="dropdown-item" href="index.html"><img src="Images/aboutMe.png" title="About Me"
-                                width="50px" height="50px" alt="Where is my button?"></a></li>
-                    <h6 class="dropdown-header"> Programming Languages </h6>
-                    <li><a class="dropdown-item" href="progLanguagesPage.html"><img
-                                src="Images/programmingLanguages.png" title="Programming Languages" width="55px"
-                                height="55px" alt="Where is my button?">
-                        </a></li>
-                    <h6 class="dropdown-header"> Projects </h6>
-                    <li><a class="dropdown-item" href="projectsPage.html">
-                            <img src="Images/projects.png" title="Projects" width="50px" height="50px"
-                                alt="Where is my button?">
-                        </a></li>
-                </center>
+                <h6 class="dropdown-header"> About Me </h6>
+                <li><a class="dropdown-item" href="index.html"><img src="Images/aboutMe.png" title="About Me"
+                            width="50px" height="50px" alt="Where is my button?"></a></li>
+                <h6 class="dropdown-header"> Programming Languages </h6>
+                <li><a class="dropdown-item" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
+                            title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+                    </a></li>
+                <h6 class="dropdown-header"> Projects </h6>
+                <li><a class="dropdown-item" href="projectsPage.html">
+                        <img src="Images/projects.png" title="Projects" width="50px" height="50px"
+                            alt="Where is my button?">
+                    </a></li>
             </ul>
         </div>
         <!--
@@ -109,7 +106,7 @@
             <div class="col">
                 <div class="placeholder"></div>
                 <div class="container">
-                    <div class="card">
+                    <div class="infoCard">
                         <h3>
                             <center> Summary: </center>
                         </h3>
@@ -123,13 +120,13 @@
                 </div>
                 <div class="placeholder"></div>
                 <div class="container">
-                    <div class="card">
+                    <div class="infoCard">
                         <h3>
                             <center> Contact: </center>
                         </h3>
                         <ul class="lists">
-                            <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
-                            <li> <b><i>Email:</i></b> <a href="mailto: jadnellReyes@gmail.com">
+                            <li> <b><i>Phone Number:</i></b> <a id="link" href="tel:787-605-5895"> (787) 605-5895 </a> </li>
+                            <li> <b><i>Email:</i></b> <a id="link" href="mailto: jadnellReyes@gmail.com">
                                     jadnellReyes@gmail.com</a>
                             </li>
 
@@ -151,20 +148,20 @@
                 <br>
                 <center>
                     <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
-                            title="Instagram" width="50px" height="50px" alt="Where is my button?">
+                            title="Instagram" width="40px" height="40px" alt="Where is my button?">
                     </a>
 
                     <a class="button" href="https://www.twitter.com/jadnellReyes"><img src="Images/twitter.png"
-                            title="Twitter" width="50px" height="50px" alt="Where is my button?">
+                            title="Twitter" width="40px" height="40px" alt="Where is my button?">
                     </a>
 
                     <a class="button" href="https://paypal.me/jadnell">
-                        <img src="Images/paypal.png" title="PayPal" width="50px" height="50px"
+                        <img src="Images/paypal.png" title="PayPal" width="40px" height="40px"
                             alt="Where is my button?">
                     </a>
 
                     <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png" title="GitHub"
-                            width="50px" height="50px" alt="Where is my button?">
+                            width="40px" height="40px" alt="Where is my button?">
                     </a>
 
                 </center>
