Mininal changes including new picture

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <div id="navBar">
         <div class="dropdown-center">
-            <button class="btn" id="menuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="Images/hamburgerMenu.png" title="Menu" width="48px" height="48px" alt="Menu Button">
+            <button class="btn " id="menuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="Images/hamburgerMenu.png" title="Menu" width="50px" height="50px" alt="Menu Button">
             </button>
             <ul class="dropdown-menu">
                 <h6 class="dropdown-header"> About Me </h6>
@@ -31,7 +31,7 @@
                             width="50px" height="50px" alt="Where is my button?"></a></li>
                 <h6 class="dropdown-header"> Programming Languages </h6>
                 <li><a class="dropdown-item" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
-                            title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+                            title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
                     </a></li>
                 <h6 class="dropdown-header"> Projects </h6>
                 <li><a class="dropdown-item" href="projectsPage.html">
@@ -41,7 +41,6 @@
             </ul>
         </div>
     </div>
-
     <div id="greeting">
         <h2>
             <center> Hello, </center>
@@ -56,16 +55,17 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
+                <div class="placeholder"></div>
                 <div class="container">
                     <center>
-                        <a><img id="myPic" src="Images/ME.jpg" title="Hello! This is me" width="350px" height="350px"
-                                alt="I was supposed to appear here..."></a>
+                        <a><img id="myPic" src="Images/TRENZAS ME.jpg" title="Hello! This is me" width="350px"
+                                height="350px" alt="I was supposed to appear here..."></a>
                     </center>
+                    <div class="placeholder"></div>
                 </div>
             </div>
 
             <div class="col">
-                <div class="placeholder"></div>
                 <div class="container">
                     <div class="infoCard">
                         <h3>
@@ -91,7 +91,6 @@
                             <li> <b><i>Email:</i></b> <a id="link" href="mailto: jadnellReyes@gmail.com">
                                     jadnellReyes@gmail.com</a>
                             </li>
-
                         </ul>
                     </div>
                 </div>
@@ -115,25 +114,25 @@
                         <div class="col"></div>
                         <div class="col">
                             <div class="container">
-                                <a class="button" href="https://www.instagram.com/j_dnell/"><img
+                                <a type="button" href="https://www.instagram.com/j_dnell/"><img
                                         src="Images/instagram.png" title="Instagram" width="40px" height="40px"
-                                        alt="Where is my button?">
+                                        alt="Instagram Button">
                                 </a>
                             </div>
                         </div>
                         <div class="col">
                             <div class="container">
-                                <a class="button" href="https://www.twitter.com/jadnellReyes"><img
+                                <a type="button" href="https://www.twitter.com/jadnellReyes"><img
                                         src="Images/twitter.png" title="Twitter" width="40px" height="40px"
-                                        alt="Where is my button?">
+                                        alt="Twitter Button">
                                 </a>
                             </div>
                         </div>
 
                         <div class="col">
                             <div class="container">
-                                <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
-                                        title="GitHub" width="40px" height="40px" alt="Where is my button?">
+                                <a type="button" href="https://github.com/jadnell555"><img src="Images/github.png"
+                                        title="GitHub" width="40px" height="40px" alt="GitHub Button">
                                 </a>
                             </div>
                         </div>
